city name updated

--- a/card.html
+++ b/card.html
@@ -68,7 +68,7 @@
 <body>
 
     <div class="weather-card">
-        <h2>City Name</h2>
+        <h2>Lisbon</h2>
         <div class="temp">25°C</div>
         <div class="icon">☀️</div> 
         
