search input added

--- a/card.html
+++ b/card.html
@@ -15,6 +15,19 @@
             margin: 0;
         }
 
+        .search-container {
+            margin-bottom: 20px;
+            text-align: center;
+        }
+
+        .search-container input {
+            padding: 10px;
+            font-size: 16px;
+            border-radius: 5px;
+            border: 1px solid #ddd;
+            width: 250px;
+        }
+
         .weather-card {
             background-color: #fff;
             border-radius: 10px;
@@ -66,6 +79,10 @@
     </style>
 </head>
 <body>
+
+    <div class="search-container">
+        <input type="text" id="city-search" placeholder="Enter city name" />
+    </div>
 
     <div class="weather-card">
         <h2>Lisbon</h2>
