position of the elements updated

--- a/card.html
+++ b/card.html
@@ -18,6 +18,7 @@
         .search-container {
             margin-bottom: 20px;
             text-align: center;
+            z-index:1;
         }
 
         .search-container input {
@@ -35,6 +36,7 @@
             width: 300px;
             padding: 20px;
             text-align: center;
+            z-index:1;
         }
 
         .weather-card h2 {
