--- a/card.html
+++ b/card.html
@@ -18,7 +18,7 @@
         .search-container {
             margin-bottom: 20px;
             text-align: center;
-            z-index:1;
+            position: absolute;
         }
 
         .search-container input {
@@ -36,7 +36,6 @@
             width: 300px;
             padding: 20px;
             text-align: center;
-            z-index:2;
         }
 
         .weather-card h2 {
