--- a/card.html
+++ b/card.html
@@ -36,6 +36,7 @@
             width: 300px;
             padding: 20px;
             text-align: center;
+            position: relative;
         }
 
         .weather-card h2 {
