--- a/card.html
+++ b/card.html
@@ -11,6 +11,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            flex-direction: column; 
             height: 100vh;
             margin: 0;
         }
@@ -18,7 +19,6 @@
         .search-container {
             margin-bottom: 20px;
             text-align: center;
-            position: absolute;
         }
 
         .search-container input {
