added shadow to the search input

--- a/card.html
+++ b/card.html
@@ -19,6 +19,7 @@
         .search-container {
             margin-bottom: 20px;
             text-align: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
         .search-container input {
