--- a/card.html
+++ b/card.html
@@ -78,6 +78,53 @@
             margin-top: 10px;
             color: #777;
         }
+
+        .switch-container {
+            margin-top: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .switch-container input {
+            display: none;
+        }
+
+        .switch-label {
+            display: flex;
+            align-items: center;
+            cursor: pointer;
+            background-color: #ddd;
+            border-radius: 30px;
+            padding: 5px 15px;
+            transition: background-color 0.3s;
+        }
+
+        .switch-label span {
+            font-size: 14px;
+            color: #333;
+            padding: 0 10px;
+        }
+
+        .switch-container input:checked + .switch-label {
+            background-color: #4CAF50;
+        }
+
+        .switch-container input:checked + .switch-label span {
+            color: #fff;
+        }
+
+        .switch-container input:checked + .switch-label .switch-toggle {
+            transform: translateX(20px);
+        }
+
+        .switch-toggle {
+            width: 20px;
+            height: 20px;
+            border-radius: 50%;
+            background-color: #fff;
+            transition: transform 0.3s;
+        }
     </style>
 </head>
 <body>
@@ -110,6 +157,15 @@
             <p>Feels like: 23°C</p>
             <p>Sunset: 7:30 PM</p>
         </div>
+    </div>
+
+    <div class="switch-container">
+        <input type="checkbox" id="toggle-switch">
+        <label for="toggle-switch" class="switch-label">
+            <span>Today</span>
+            <div class="switch-toggle"></div>
+            <span>Tomorrow</span>
+        </label>
     </div>
 
 </body>
