--- a/card.html
+++ b/card.html
@@ -104,12 +104,13 @@
 
         /* Create a label for "Today" and "Tomorrow" */
         .switch-label span {
-            font-size: 30px;
+            font-size: 20px;
             color: #333;
             position: absolute;
             top: 50%;
             transform: translateY(-50%);
-            width: 50%;
+            width: 50px;
+            height: 30px;
             text-align: center;
             transition: color 0.3s;
         }
